# MARLLLM

./: .gitignore  README.md  framework_spec.md  pyproject.toml  requirements.txt  train.py  train_negotiation.py
envs/: counting_env.py  deal_or_no_deal_env.py
marlllm/: __init__.py  agent.py  config.py  loss.py  store.py  tokeniser.py  trainer.py  types.py
