[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marlllm"
version = "0.1.0"
description = "Multi-agent reinforcement learning framework for LLMs via surprise minimisation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "pettingzoo>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
marlllm-train = "train:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["marlllm", "envs"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
